--- a/server/views/projects/projects.liquid
+++ b/server/views/projects/projects.liquid
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container">
   <nav>
-    <a href="/"><img src="/public/images/logo-man-navbar.svg" alt="logo of DMMDH"></a>
+    <div class="logo-element"><a href="/"><img src="/public/images/logo-man-navbar.svg" alt="logo of DMMDH"></a></div>
       {% render '../../components/category-filter/category-filter.liquid', categories: categories %}
   <div>
     <button hidden><img src="" alt="search icon"></button>
