--- a/server/views/index.css
+++ b/server/views/index.css
@@ -154,7 +154,7 @@ cursor: url("/images/cursor/hammer-cursor-active.svg") 48 48, auto;
     top: 0;
     left: 0;
     z-index: 9;
-    background-image: url(/public/images/images-responsiveness/repeating-wall-left.png);
+    background-image: url(/public/images/images-responsiveness/repeating-wall-left.webp);
     background-repeat: repeat-y;
     background-size: 155px;
     height: 100%;
@@ -182,7 +182,7 @@ cursor: url("/images/cursor/hammer-cursor-active.svg") 48 48, auto;
     top: 0;
     right: 0;
     z-index: 9;
-    background-image: url(/public/images/images-responsiveness/repeating-wall-right.png);
+    background-image: url(/public/images/images-responsiveness/repeating-wall-right.webp);
     background-repeat: repeat-y;
     background-size: 155px;
     height: 100%;
@@ -196,7 +196,7 @@ cursor: url("/images/cursor/hammer-cursor-active.svg") 48 48, auto;
     z-index: 5;
     height: 300px;
     width: 100%;
-    background-image: url(/public/images/images-responsiveness/repeating-cage.png);
+    background-image: url(/public/images/images-responsiveness/repeating-cage.webp);
     background-repeat: repeat-x;
     background-position: -20% 0;
     background-size: 1150px;
@@ -207,7 +207,7 @@ cursor: url("/images/cursor/hammer-cursor-active.svg") 48 48, auto;
     top: 0;
     left: 0;
     z-index: 1;
-    background-image: url(/public/images/images-responsiveness/repeating-roof.png);
+    background-image: url(/public/images/images-responsiveness/repeating-roof.webp);
     background-repeat: repeat-x;
     background-position: 20% 0;
     width: 100%;
@@ -232,7 +232,7 @@ cursor: url("/images/cursor/hammer-cursor-active.svg") 48 48, auto;
     bottom: 0;
     left: 0;
     z-index: 1;
-    background-image: url(/public/images/images-responsiveness/repeating-floor.png);
+    background-image: url(/public/images/images-responsiveness/repeating-floor.webp);
     background-repeat: repeat;
     width: 100%;
     height: 80px;
