--- a/server/components/preloader/preload.liquid
+++ b/server/components/preloader/preload.liquid
@@ -1,4 +1,4 @@
-<button id="enterSite">SITE BETREDEN</button>
+<button class="ticket" id="enterSite">SITE BETREDEN</button>
   <div class="curtain-left"></div>
   <div class="curtain-right"></div> 
 <div class="curtain-light"></div>
