--- a/server/views/projects/projects.liquid
+++ b/server/views/projects/projects.liquid
@@ -36,11 +36,9 @@
     </div>
 
     {% comment %} Full Width Component 5: Crocodile Component {% endcomment %}
-    <div class="full-width-component crocodile-wrapper" data-type="full-width" data-id="crocodile-1">
-      <div class="full-width-content">
-        {% render "../../components/full-width-crocodile/crocodile.liquid" %}
-      </div>
-    </div>
+    <div class="crocodile-direct-wrapper" data-type="full-width" style="grid-column: 1 / -1;">
+  {% render "../../components/full-width-crocodile/crocodile.liquid" %}
+</div>
   </div>
 </div>
 
