--- a/server/components/stage-lights/stage-light.liquid
+++ b/server/components/stage-lights/stage-light.liquid
@@ -1,10 +1,34 @@
-<div id="rails">
-    <div class="lights"> <img src="/public/images/spotlights/licht.png" alt="spotlight on rails"> <div class="beam"></div> </div>
-    <div class="lights"> <img src="/public/images/spotlights/licht.png" alt="spotlight on rails"> <div class="beam"></div> </div>
-    <div class="lights"> <img src="/public/images/spotlights/licht.png" alt="spotlight on rails"> <div class="beam"></div> </div>
-    <div class="lights"> <img src="/public/images/spotlights/licht.png" alt="spotlight on rails"> <div class="beam"></div></div>
-    <div class="lights"> <img src="/public/images/spotlights/licht-2.png" alt="spotlight on rails"> <div class="beam"></div> </div>
-    <div class="lights"> <img src="/public/images/spotlights/licht-2.png" alt="spotlight on rails"> <div class="beam"></div> </div>
-    <div class="lights"> <img src="/public/images/spotlights/licht-2.png" alt="spotlight on rails"> <div class="beam"></div> </div>
-    <div class="lights"> <img src="/public/images/spotlights/licht-2.png" alt="spotlight on rails"> <div class="beam"></div> </div>
+<div class="layer-2" id="rails">
+  <div class="lights">
+    <img src="/public/images/spotlights/licht.png" alt="spotlight on rails">
+    <div class="beam"></div>
+  </div>
+  <div class="lights">
+    <img src="/public/images/spotlights/licht.png" alt="spotlight on rails">
+    <div class="beam"></div>
+  </div>
+  <div class="lights">
+    <img src="/public/images/spotlights/licht.png" alt="spotlight on rails">
+    <div class="beam"></div>
+  </div>
+  <div class="lights">
+    <img src="/public/images/spotlights/licht.png" alt="spotlight on rails">
+    <div class="beam"></div>
+  </div>
+  <div class="lights">
+    <img src="/public/images/spotlights/licht-2.png" alt="spotlight on rails">
+    <div class="beam"></div>
+  </div>
+  <div class="lights">
+    <img src="/public/images/spotlights/licht-2.png" alt="spotlight on rails">
+    <div class="beam"></div>
+  </div>
+  <div class="lights">
+    <img src="/public/images/spotlights/licht-2.png" alt="spotlight on rails">
+    <div class="beam"></div>
+  </div>
+  <div class="lights">
+    <img src="/public/images/spotlights/licht-2.png" alt="spotlight on rails">
+    <div class="beam"></div>
+  </div>
 </div>
