--- a/server/views/index.liquid
+++ b/server/views/index.liquid
@@ -2,65 +2,87 @@
 
 
 
-{% comment %} {% block content %}
-<div class="container">
+{% comment %}
+  {% block content %}
+  <div class="container">
   <h1>De Man met de hamer</h1>
 
   <a href="/projects">
-    <h2>Naar projecten</h2>
+  <h2>Naar projecten</h2>
   </a>
 
 
-{% endblock %} {% endcomment %}
+  {% endblock %}{% endcomment %}
 
 
 {% block content %}
 
-    <div class="frame">
-        <div class="audience layer-3">
-            <img src="/public/images/images-responsiveness/audience.png">
+  <div class="frame">
+    <a href="#" class="logo-container layer-1">
+      <div class="hanging-sign">
+        <div class="cable"></div>
+        <div class="cable"></div>
+        <div class="logo">
+          <img src="/public/images/images-responsiveness/hanging-logo.png">
+          <div class="gradient"></div>
         </div>
+      </div>
+      <h2 href="#" class="nav-text">Over<span class="break">de man</span>
+      </h2>
+      <span class="pulse"></span>
+    </a>
 
-
-        <img class="bottom-left layer-2" src="/public/images/images-responsiveness/frame-bottom-left.png">
-        <img class="top-left layer-2" src="/public/images/images-responsiveness/frame-top-left.png">
-        <div class="repeating-wall-left layer-2"></div>
-
-        <div class="repeating-cage layer-2"></div>
-
-        <div class="repeating-floor layer-2"></div>
-        <a href="/projects">
-            <div class="prop-container layer-1">
-                <img class="prop-shadows" src="/public/images/images-responsiveness/prop-shadows.png">
-                <img class="props" src="/public/images/images-responsiveness/props.png">
-                <h2>Bekijk <span class="break"></span>Projecten</h2>
-            </div>
-        </a>
-        <div class="repeating-roof layer-2">
-        </div>
-
-        <div class="repeating-wall-right layer-2"></div>
-        <img class="bottom-right layer-2" src="/public/images/images-responsiveness/frame-bottom-right.png">
-        <img class="top-right layer-2" src="/public/images/images-responsiveness/frame-top-right.png">
+    <div class="audience layer-3">
+      <img src="/public/images/images-responsiveness/audience.png">
     </div>
-{% render '../components/stage-lights/stage-light.liquid' %}
 
+    <img class="bottom-left layer-2" src="/public/images/images-responsiveness/frame-bottom-left.png">
+    <img class="top-left layer-2" src="/public/images/images-responsiveness/frame-top-left.png">
+    <div class="repeating-wall-left layer-2"></div>
 
-    <svg class="visually-hidden" width="10" height="10" xmlns="http://www.w3.org/2000/svg">
-        <defs>
-            <filter id="border-text" filterUnits="userSpaceOnUse">
-                <feMorphology in="SourceAlpha" operator="dilate" radius="3" result="DILATED" />
+    <div class="repeating-cage layer-2"></div>
+    {% render '../components/stage-lights/stage-light.liquid' %}
 
-                <feFlood flood-color="white" />
-                <feComposite in="OUTLINE-COLOR" in2="DILATED" operator="in" result="COLORED-OUTLINE" />
+    <div class="repeating-floor layer-2"></div>
 
-                <feMerge>
-                    <feMergeNode in="COLORED-OUTLINE" />
-                    <feMergeNode in="SourceGraphic" />
-                </feMerge>
-            </filter>
-        </defs>
-    </svg>
+    <a href="#" class="prop-container layer-1">
+      <img class="prop-shadows" src="/public/images/images-responsiveness/prop-shadows.png">
+      <img class="props" src="/public/images/images-responsiveness/props.png">
+      <h2 href="#" class="nav-text">Bekijk<span class="break"></span>Projecten</h2>
+      <span class="pulse delayed"></span>
+    </a>
+
+    {% render '../components/cannon/cannon.liquid' %}
+
+    <div class="moon-container layer-1">
+      <div class="cable"></div>
+      <div class="cable"></div>
+      <img class="moon" src="/public/images/images-responsiveness/moon.png">
+    </div>
+
+    <div class="repeating-roof layer-2"></div>
+
+    <div class="repeating-wall-right layer-2"></div>
+    <img class="bottom-right layer-2" src="/public/images/images-responsiveness/frame-bottom-right.png">
+    <img class="top-right layer-2" src="/public/images/images-responsiveness/frame-top-right.png">
+
+  </div>
+
+  <svg class="visually-hidden" width="10" height="10" xmlns="http://www.w3.org/2000/svg">
+    <defs>
+      <filter id="border-text" filterUnits="userSpaceOnUse">
+        <feMorphology in="SourceAlpha" operator="dilate" radius="3" result="DILATED"/>
+
+        <feFlood flood-color="white"/>
+        <feComposite in="OUTLINE-COLOR" in2="DILATED" operator="in" result="COLORED-OUTLINE"/>
+
+        <feMerge>
+          <feMergeNode in="COLORED-OUTLINE"/>
+          <feMergeNode in="SourceGraphic"/>
+        </feMerge>
+      </filter>
+    </defs>
+  </svg>
 
 
 {% endblock %}
