--- a/server/views/index.liquid
+++ b/server/views/index.liquid
@@ -29,7 +29,7 @@
         <div class="repeating-cage layer-2"></div>
 
         <div class="repeating-floor layer-2"></div>
-        <a href="/projects">
+        <a href="/projects" id="projects">
             <div class="prop-container layer-1">
                 <img class="prop-shadows" src="/public/images/images-responsiveness/prop-shadows.webp">
                 <img class="props" src="/public/images/images-responsiveness/props.webp">
